# roborabbit

./: README.md  pyproject.toml  run.py
roborabbit/: connection.py  logger.py  main.py  rmq.py  roborabbit.py
tests/: test_1.yaml  test_worker.py
