[tool.poetry]
name = "roborabbit"
version = "0.4.2"
description = "Set up your rabbit instance using a declarative yaml file."
authors = ["Skyler Lewis <skyler@hivewire.co>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/alairock/roborabbit"
repository = "https://github.com/alairock/roborabbit"
documentation = "https://github.com/alairock/roborabbit/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0"
PyYAML = "^5.4"
aio-pika = "^7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
roborabbit = "roborabbit.main:main"
